--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -9,4 +9,4 @@ name = "go"
 enabled = true
 
   [analyzers.meta]
-  import_path = "github.com/zaquestion/lab"
+  import_path = "github.com/kovetskiy/lab"
