--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
 
 after_success:
   - |
-    for r in $(ag -Q 'log.Fatal' | awk -F: '{ print "github.com/zaquestion/lab/" $1 ":" $2-1 "\\.[0-9][0-9]\\?," $2+1 }' | sed 's|/|\\/|g')
+    for r in $(ag -Q 'log.Fatal' | awk -F: '{ print "github.com/kovetskiy/lab/" $1 ":" $2-1 "\\.[0-9][0-9]\\?," $2+1 }' | sed 's|/|\\/|g')
       do sed -i "/$r/d" coverage.txt
     done
   - bash <(curl -s https://codecov.io/bash)
