do not ignore lab in whole project

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,4 @@
-# Our binary
-lab
-
-# IntelliJ
-.idea/
-
-# vim
-*.sw*
-*.vim
-
-# test
+/lab
 _test
-
 coverage*
-vendor
-
-# The testdata-* copies created by the unit tests must be ignored or the tests
-# will encounter write errors as Git attempts to add the dirs to its index.
 testdata-*
